# tesi-triennale

./: .gitignore  presentazione_tesi_Crociati.pptx  prot.drawio  readme.md
latex/: bibliography.bib  capitolo1.tex  capitolo2.tex  capitolo3.tex  conclusioni.tex  introduzione.tex  tesi.tex
node/tesi/: server.js
node/tesi/static/: index.html  main.js
rustAndWasm/: compilingAndRunning
rustAndWasm/esempio_wasi/: Cargo.toml  main.wasm  main.wat  text_file.txt
rustAndWasm/esempio_wasi/src/: main.rs
rustAndWasm/hello-world/: Cargo.toml
rustAndWasm/hello-world/src/: main.rs
rustAndWasm/image_proc_module/: Cargo.toml
rustAndWasm/image_proc_module/src/: main.rs
rustAndWasm/tesi_Rust_WASI/: Cargo.toml
rustAndWasm/tesi_Rust_WASI/src/: common.rs  main.rs
rustAndWasm/tesi_Rust_WASI/src/client/: index.html
rustAndWasm/tesi_Rust_WASI/src/server/: handlers.rs  image_proc.rs
rustAndWasm/tesi_Rust_WASI/src/server/static/: index.html  main.js
rustAndWasm/tesi_Rust_WASI/src/static/: index.html  main.js
rustAndWasm/tesi_image_proc_module/: Cargo.toml
rustAndWasm/tesi_image_proc_module/src/: main.rs
rustAndWasm/webAppExample/: Cargo.toml
test/: risultati_test.xlsx
