[package]
name = "image_proc_module"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 3

[dependencies]

serde = { version = "1.0.188", features = ["derive"] }
image = "0.24.7"
serde_json = "1.0.105"