[package]
name = "tesi_Rust_WASI"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-rt = "2.8"
actix-multipart = "0.6"
actix-files = "0.6"
futures-util = "0.3"
tempfile = "3.1"
serde = { version = "1.0", features = ["derive"] }
env_logger = "0.10"
tokio = { version = "1.32", features = ["full"] }
futures = "0.3"
config = "0.13.3"
image = "0.24.7"