[package]
name = "tesi_Rust_WASI"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 3

[dependencies]
actix-web = "4"
actix-rt = "2.8"
actix-multipart = "0.6"
actix-files = "0.6"
futures-util = "0.3"
serde = "1.0"
env_logger = "0.10"
tokio = { version = "1.32", features = ["full"] }
futures = "0.3"
config = "0.13.3"
image = "0.24.7"
wasmtime = "12.0.2"
wasmtime-wasi = "12.0.2"
wasi-common = "12.0.0"
anyhow = "1.0.75"
serde_json = "1.0.105"