[package]
name = "tesi_rust_wasi"
version = "0.1.0"
edition = "2021"


[profile.dev]
opt-level = 3

[dependencies]
actix-web = "4.4.0"
actix-rt = "2.9"
actix-multipart = "0.6"
actix-files = "0.6"
futures-util = "0.3"
serde = "1.0"
env_logger = "0.10"
tokio = { version = "1.32", features = ["full"] }
futures = "0.3"
config = "0.13.3"
image = "0.24.7"
wasmtime = "11.0.0"
wasmtime-wasi = "11.0.0"
wasi-common = "11.0.0"
anyhow = "1.0.75"
serde_json = "1.0"
peak_alloc = "0.2"
sysinfo = "0.29"
cpu-time = "1"